<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="T_MaxString" Id="{5b3b7ae8-76dc-47ec-9a83-0145487534f5}">
    <Declaration><![CDATA[TYPE T_MaxString : string(255); END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>